# nonebot-plugin-ts3-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: build-recorder-sidecar.yml
nonebot_plugin_ts3_tracker/: __init__.py  config.py  runtime.py  service.py  storage_paths.py
nonebot_plugin_ts3_tracker/recorder_sidecar/: Cargo.toml
nonebot_plugin_ts3_tracker/recorder_sidecar/src/: main.rs
nonebot_plugin_ts3_tracker/recording/: __init__.py  commands.py  manager.py  paths.py  retention.py  session.py  sidecar.py  slice.py
